# ftcl

./: CMakeLists.txt  game.tcl  readme.md
docs/: benchmark.md  benchmark_parser_backends.py  plot_benchmarks.py
docs/benchmark_data/: channel_latency_summary.csv  channel_latency_us.csv  frame_time_summary.csv  frame_time_us.csv  parser_backend_timing_raw.csv  parser_backend_timing_summary.csv  semantic_pass_rate.csv  semantic_pass_rate_snapshot.csv
include/: commands.hpp  dict.hpp  eval_ptr.hpp  expected_compat.hpp  expr.hpp  interp.hpp  lexer.hpp  lib.hpp  list.hpp  macros.hpp  parser.hpp  scope.hpp  test_harness.hpp  tokenizer.hpp  type.hpp  util.hpp  value.hpp
test/: CMakeLists.txt  bench_ftcl.cpp  test_all_headers.cpp  test_array_semantics.cpp  test_dict_semantics.cpp  test_eval_ptr.cpp  test_expr_semantics.cpp  test_ftcl_subset.cpp  test_ftcl_suite.cpp  test_getch_semantics.cpp  test_gets_semantics.cpp  test_info_semantics.cpp  test_lexer.cpp  test_list_semantics.cpp  test_parser_backend.cpp  test_parser_subst.cpp  test_proc_scope.cpp  test_return_catch.cpp  test_source_semantics.cpp  test_string_semantics.cpp  test_test_harness_semantics.cpp  test_thread_semantics.cpp  test_time_semantics.cpp  test_tokenizer.cpp
test/tests/: all.tcl  expr.tcl  interp.tcl  lappend.tcl  list.tcl  thread.tcl
